Issue #22: Updated select popper styles (affected max dropdown viewport width). (Was visible in `SelectLanguagePredefinedForm`).

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -228,6 +228,12 @@
       border: none;
     }
   }
+
+  // Radix popper overrides...
+  [data-radix-popper-content-wrapper] {
+    min-width: auto !important;
+    max-width: var(--radix-popper-available-width);
+  }
 }
 
 @layer utilities {
